--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
-    "expo-application": "^5.3.0",
-    "expo-auth-session": "^5.0.2",
-    "expo-crypto": "^12.4.1",
-    "expo-dev-client": "^2.4.6",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
-    "expo-web-browser": "^12.3.2",
+    "expo-web-browser": "~12.1.1",
     "firebase": "^10.0.0",
     "react": "18.2.0",
+    "react-google-button": "^0.7.2",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
